# knotdnssd

./: CMakeLists.txt  LEGAL  LICENSE  README.md
cmake/: FindAvahi.cmake  FindDBus.cmake
example/: CMakeLists.txt  main.cpp
include/knot/: dnssd.h
redist/: README.md
src/: avahi.cpp  bonjour.cpp  util.c  util.cpp  util.h
